# Lexi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: cache.py  config.py  logging.py
app/models/: schemas.py
app/routes/: cases.py  meta.py
app/services/: jagriti_client.py
tests/: conftest.py  test_integration.py  test_jagriti_client.py  test_routes_cases.py  test_routes_meta.py
tests/fixtures/html/: jagriti_captcha_page.html  jagriti_commissions_karnataka.html  jagriti_search_page.html  jagriti_search_results.html
